--- a/about.html
+++ b/about.html
@@ -131,6 +131,7 @@ header-img: "img/about-bg.jpg"
                 <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. ICML (2020).
             </div>
                 [<a href="http://proceedings.mlr.press/v119/kristiadi20a.html">abs</a>]
+                [<a href="https://github.com/wiseodd/last_layer_laplace">code</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
 
