--- a/about.html
+++ b/about.html
@@ -70,6 +70,7 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-3"><h3>Teaching</h3></div>
         <div class="col-md-9">
             <h4>University of Tübingen</h4>
+            <div>Tutor, Data Literacy, Winter Semester 2020-2021</div>
             <div>Tutor, Probabilistic Machine Learning, Summer Semester 2020</div>
             <div>Tutor, Data Literacy, Winter Semester 2019-2020</div>
 
