--- a/about.html
+++ b/about.html
@@ -70,6 +70,7 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-3"><h3>Teaching</h3></div>
         <div class="col-md-9">
             <h4>University of Tübingen</h4>
+            <div>Tutor, Probabilistic Machine Learning, Summer Semester 2021</div>
             <div>Tutor, Data Literacy, Winter Semester 2020-2021</div>
             <div>Tutor, Probabilistic Machine Learning, Summer Semester 2020</div>
             <div>Tutor, Data Literacy, Winter Semester 2019-2020</div>
@@ -127,6 +128,23 @@ header-img: "img/about-bg.jpg"
     <div class="row" style="padding-top: 3em;">
         <div class="col-md-3"><h3>Publication</h3></div>
         <div class="col-md-9">
+            <h4>Learnable Uncertainty under Laplace Approximations</h4>
+            <div>
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. UAI (2021).
+            </div>
+                [<a href="https://arxiv.org/abs/2010.02720">arxiv</a>]
+                [<a href="https://github.com/wiseodd/lula">code</a>]
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
+            <h4>An Infinite-Feature Extension for Bayesian ReLU Nets That Fixes Their Asymptotic Overconfidence</h4>
+            <div>
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. Preprint (2020).
+            </div>
+                [<a href="https://arxiv.org/abs/2010.02709">arxiv</a>]
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
             <h4>Being Bayesian, Even Just a Bit, Fixes Overconfidence in ReLU Networks</h4>
             <div>
                 <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. ICML (2020).
@@ -146,7 +164,7 @@ header-img: "img/about-bg.jpg"
 
             <h4>Predictive Uncertainty Quantification with Compound Density Networks</h4>
             <div>
-                <i>Kristiadi, Agustinus</i> and Asja Fischer. arXiv preprint arXiv:1902.01080 (2019).
+                <i>Kristiadi, Agustinus</i> and Asja Fischer. Preprint (2019).
             </div>
                 [<a href="https://arxiv.org/abs/1902.01080">arxiv</a>]
                 [<a href="https://github.com/wiseodd/compound-density-networks">code</a>]
