Update email & publications

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ header-img: "img/about-bg.jpg"
 
     <div class="row">
         <div class="col-md-3"><b>Email</b></div>
-        <div class="col-md-8">agustinus.kristiadi[at]uni-tuebingen.de</div>
+        <div class="col-md-8">agustinus[at]kristia.de</div>
     </div>
 
     <div class="row">
@@ -128,26 +128,34 @@ header-img: "img/about-bg.jpg"
     <div class="row" style="padding-top: 3em;">
         <div class="col-md-3"><h3>Publication</h3></div>
         <div class="col-md-9">
+            <h4>An Infinite-Feature Extension for Bayesian ReLU Nets That Fixes Their Asymptotic Overconfidence</h4>
+            <div>
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. NeurIPS 2021 <b>spotlight</b>.
+            </div>
+                [<a href="https://arxiv.org/abs/2010.02709">arxiv</a>]
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
+            <h4>Laplace Redux -- Effortless Bayesian Deep Learning</h4>
+            <div>
+                Daxberger*, Erik, <i>Agustinus Kristiadi</i>*, Alexander Immer*, Runa Eschenhagen*, Matthias Bauer, and Philipp Hennig. NeurIPS 2021.
+            </div>
+                [<a href="https://arxiv.org/abs/2010.02709">arxiv</a>]
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
             <h4>Learnable Uncertainty under Laplace Approximations</h4>
             <div>
-                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. UAI (2021).
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. UAI 2021.
             </div>
                 [<a href="https://arxiv.org/abs/2010.02720">arxiv</a>]
                 [<a href="https://github.com/wiseodd/lula">code</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
 
-            <h4>An Infinite-Feature Extension for Bayesian ReLU Nets That Fixes Their Asymptotic Overconfidence</h4>
-            <div>
-                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. Preprint (2020).
-            </div>
-                [<a href="https://arxiv.org/abs/2010.02709">arxiv</a>]
-
-            <div class="row" style="padding-bottom: 2em"></div>
-
             <h4>Being Bayesian, Even Just a Bit, Fixes Overconfidence in ReLU Networks</h4>
             <div>
-                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. ICML (2020).
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. ICML 2020.
             </div>
                 [<a href="http://proceedings.mlr.press/v119/kristiadi20a.html">abs</a>]
                 [<a href="https://github.com/wiseodd/last_layer_laplace">code</a>]
@@ -173,7 +181,7 @@ header-img: "img/about-bg.jpg"
 
             <h4>Incorporating Literals into Knowledge Graph Embeddings</h4>
             <div>
-              <i>Kristiadi, Agustinus</i>*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer. ISWC (2019).
+              <i>Kristiadi, Agustinus</i>*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer. ISWC 2019.
             </div>
                 [<a href="https://arxiv.org/abs/1802.00934">arxiv</a>]
                 [<a href="https://github.com/SmartDataAnalytics/LiteralE">code</a>]
@@ -182,7 +190,7 @@ header-img: "img/about-bg.jpg"
 
             <h4>Improving Response Selection in Multi-turn Dialogue Systems by Incorporating Domain Knowledge</h4>
             <div>
-              Chauduri, Debanjan, <i>Agustinus Kristiadi</i>, Jens Lehmann, Asja Fischer. CoNLL (2018).
+              Chauduri, Debanjan, <i>Agustinus Kristiadi</i>, Jens Lehmann, Asja Fischer. CoNLL 2018.
             </div>
                 [<a href="https://arxiv.org/abs/1809.03194">arxiv</a>]
                 [<a href="https://github.com/SmartDataAnalytics/AK-DE-biGRU">code</a>]
@@ -200,7 +208,7 @@ header-img: "img/about-bg.jpg"
 
             <h4>Parallel Particle Swarm Optimization for Image Segmentation</h4>
             <div>
-              <i>Kristiadi, Agustinus</i>, Pranowo Pranowo, and Paulus Mudjihartono. DEIS (2013).
+              <i>Kristiadi, Agustinus</i>, Pranowo Pranowo, and Paulus Mudjihartono. DEIS 2013.
             </div>
             [<a href="http://sdiwc.net/digital-library/web-admin/upload-pdf/00000491.pdf">pdf</a>]
             [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
