Layouting about.html

--- a/about.html
+++ b/about.html
@@ -130,24 +130,27 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-9">
             <h4>An Infinite-Feature Extension for Bayesian ReLU Nets That Fixes Their Asymptotic Overconfidence</h4>
             <div>
-                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. NeurIPS 2021 <b>spotlight</b>.
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig.
             </div>
+            <div>NeurIPS 2021 <b>[Spotlight]</b></div>
                 [<a href="https://arxiv.org/abs/2010.02709">arxiv</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
 
             <h4>Laplace Redux -- Effortless Bayesian Deep Learning</h4>
             <div>
-                Daxberger*, Erik, <i>Agustinus Kristiadi</i>*, Alexander Immer*, Runa Eschenhagen*, Matthias Bauer, and Philipp Hennig. NeurIPS 2021.
+                Daxberger*, Erik, <i>Agustinus Kristiadi</i>*, Alexander Immer*, Runa Eschenhagen*, Matthias Bauer, and Philipp Hennig.
             </div>
+            <div>NeurIPS 2021</div>
                 [<a href="https://arxiv.org/abs/2010.02709">arxiv</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
 
             <h4>Learnable Uncertainty under Laplace Approximations</h4>
             <div>
-                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. UAI 2021.
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig.
             </div>
+            <div>UAI 2021</div>
                 [<a href="https://arxiv.org/abs/2010.02720">arxiv</a>]
                 [<a href="https://github.com/wiseodd/lula">code</a>]
 
@@ -155,8 +158,9 @@ header-img: "img/about-bg.jpg"
 
             <h4>Being Bayesian, Even Just a Bit, Fixes Overconfidence in ReLU Networks</h4>
             <div>
-                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. ICML 2020.
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig.
             </div>
+            <div>ICML 2020</div>
                 [<a href="http://proceedings.mlr.press/v119/kristiadi20a.html">abs</a>]
                 [<a href="https://github.com/wiseodd/last_layer_laplace">code</a>]
 
@@ -164,16 +168,18 @@ header-img: "img/about-bg.jpg"
 
             <h4>Fast Predictive Uncertainty for Classification with Bayesian Deep Networks</h4>
             <div>
-                Hobbhahn, Marius, <i>Agustinus Kristiadi</i>, and Philipp Hennig. arXiv preprint arXiv:2003.01227 (2020).
+                Hobbhahn, Marius, <i>Agustinus Kristiadi</i>, and Philipp Hennig.
             </div>
+            <div>Preprint</div>
                 [<a href="https://arxiv.org/abs/2003.01227">arxiv</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
 
             <h4>Predictive Uncertainty Quantification with Compound Density Networks</h4>
             <div>
-                <i>Kristiadi, Agustinus</i> and Asja Fischer. Preprint (2019).
+                <i>Kristiadi, Agustinus</i> and Asja Fischer.
             </div>
+            <div>Preprint</div>
                 [<a href="https://arxiv.org/abs/1902.01080">arxiv</a>]
                 [<a href="https://github.com/wiseodd/compound-density-networks">code</a>]
 
@@ -181,8 +187,9 @@ header-img: "img/about-bg.jpg"
 
             <h4>Incorporating Literals into Knowledge Graph Embeddings</h4>
             <div>
-              <i>Kristiadi, Agustinus</i>*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer. ISWC 2019.
+              <i>Kristiadi, Agustinus</i>*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer.
             </div>
+            <div>ISWC 2019</div>
                 [<a href="https://arxiv.org/abs/1802.00934">arxiv</a>]
                 [<a href="https://github.com/SmartDataAnalytics/LiteralE">code</a>]
 
@@ -190,8 +197,9 @@ header-img: "img/about-bg.jpg"
 
             <h4>Improving Response Selection in Multi-turn Dialogue Systems by Incorporating Domain Knowledge</h4>
             <div>
-              Chauduri, Debanjan, <i>Agustinus Kristiadi</i>, Jens Lehmann, Asja Fischer. CoNLL 2018.
+              Chauduri, Debanjan, <i>Agustinus Kristiadi</i>, Jens Lehmann, Asja Fischer.
             </div>
+            <div>CoNLL 2018</div>
                 [<a href="https://arxiv.org/abs/1809.03194">arxiv</a>]
                 [<a href="https://github.com/SmartDataAnalytics/AK-DE-biGRU">code</a>]
 
@@ -208,8 +216,9 @@ header-img: "img/about-bg.jpg"
 
             <h4>Parallel Particle Swarm Optimization for Image Segmentation</h4>
             <div>
-              <i>Kristiadi, Agustinus</i>, Pranowo Pranowo, and Paulus Mudjihartono. DEIS 2013.
+              <i>Kristiadi, Agustinus</i>, Pranowo Pranowo, and Paulus Mudjihartono.
             </div>
+            <div>DEIS 2013</div>
             [<a href="http://sdiwc.net/digital-library/web-admin/upload-pdf/00000491.pdf">pdf</a>]
             [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
         </div>
