Fix broken Laplace Redux paper

--- a/about.html
+++ b/about.html
@@ -142,7 +142,8 @@ header-img: "img/about-bg.jpg"
                 Daxberger*, Erik, <i>Agustinus Kristiadi</i>*, Alexander Immer*, Runa Eschenhagen*, Matthias Bauer, and Philipp Hennig.
             </div>
             <div>NeurIPS 2021</div>
-                [<a href="https://arxiv.org/abs/2010.02709">arxiv</a>]
+                [<a href="https://arxiv.org/abs/2106.14806">arxiv</a>]
+                [<a href="https://github.com/AlexImmer/Laplace">code</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
 
