--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-9">
             <div>Uncertainty quantification in deep learning</div>
             <div>Bayesian inference</div>
-            <div>Riemannian geometry</div>
+            <div>Riemannian and information geometry</div>
         </div>
     </div>
 
@@ -70,6 +70,7 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-3"><h3>Teaching</h3></div>
         <div class="col-md-9">
             <h4>University of Tübingen</h4>
+            <div>Tutor, Data Literacy, Winter Semester 2021-2022</div>
             <div>Tutor, Probabilistic Machine Learning, Summer Semester 2021</div>
             <div>Tutor, Data Literacy, Winter Semester 2020-2021</div>
             <div>Tutor, Probabilistic Machine Learning, Summer Semester 2020</div>
@@ -167,20 +168,11 @@ header-img: "img/about-bg.jpg"
 
             <div class="row" style="padding-bottom: 2em"></div>
 
-            <h4>Fast Predictive Uncertainty for Classification with Bayesian Deep Networks</h4>
-            <div>
-                Hobbhahn, Marius, <i>Agustinus Kristiadi</i>, and Philipp Hennig.
-            </div>
-            <div>Preprint</div>
-                [<a href="https://arxiv.org/abs/2003.01227">arxiv</a>]
-
-            <div class="row" style="padding-bottom: 2em"></div>
-
             <h4>Predictive Uncertainty Quantification with Compound Density Networks</h4>
             <div>
-                <i>Kristiadi, Agustinus</i> and Asja Fischer.
+                <i>Kristiadi, Agustinus</i>, Sina Däubener, and Asja Fischer.
             </div>
-            <div>Preprint</div>
+            <div>Bayesian Deep Learning Workshop, NeurIPS 2019</div>
                 [<a href="https://arxiv.org/abs/1902.01080">arxiv</a>]
                 [<a href="https://github.com/wiseodd/compound-density-networks">code</a>]
 
@@ -222,6 +214,23 @@ header-img: "img/about-bg.jpg"
             <div>DEIS 2013</div>
             [<a href="http://sdiwc.net/digital-library/web-admin/upload-pdf/00000491.pdf">pdf</a>]
             [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 3em;">
+        <div class="col-md-3"><h3>Preprint</h3></div>
+        <div class="col-md-9">
+            <h4>Being a Bit Frequentist Improves Bayesian Neural Networks</h4>
+            <div>
+                <i>Agustinus Kristiadi</i>, Matthias Hein, and Philipp Hennig.
+            </div>
+                [<a href="https://arxiv.org/abs/2106.10065">arxiv</a>]
+
+            <h4>Fast Predictive Uncertainty for Classification with Bayesian Deep Networks</h4>
+            <div>
+                Hobbhahn, Marius, <i>Agustinus Kristiadi</i>, and Philipp Hennig.
+            </div>
+                [<a href="https://arxiv.org/abs/2003.01227">arxiv</a>]
         </div>
     </div>
 </div>
