--- a/about.html
+++ b/about.html
@@ -226,6 +226,8 @@ header-img: "img/about-bg.jpg"
             </div>
                 [<a href="https://arxiv.org/abs/2106.10065">arxiv</a>]
 
+            <div class="row" style="padding-bottom: 2em"></div>
+
             <h4>Fast Predictive Uncertainty for Classification with Bayesian Deep Networks</h4>
             <div>
                 Hobbhahn, Marius, <i>Agustinus Kristiadi</i>, and Philipp Hennig.
