--- a/about.html
+++ b/about.html
@@ -133,87 +133,107 @@ header-img: "img/about-bg.jpg"
             <div>
                 <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig.
             </div>
-            <div>NeurIPS 2021 <b>[Spotlight]</b></div>
+            <div>
+                NeurIPS 2021 <b>[Spotlight]</b>
                 [<a href="https://arxiv.org/abs/2010.02709">arxiv</a>]
+            </div>
 
-            <div class="row" style="padding-bottom: 2em"></div>
+            <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Laplace Redux -- Effortless Bayesian Deep Learning</h4>
             <div>
                 Daxberger*, Erik, <i>Agustinus Kristiadi</i>*, Alexander Immer*, Runa Eschenhagen*, Matthias Bauer, and Philipp Hennig.
             </div>
-            <div>NeurIPS 2021</div>
+            <div>
+                NeurIPS 2021
                 [<a href="https://arxiv.org/abs/2106.14806">arxiv</a>]
                 [<a href="https://github.com/AlexImmer/Laplace">code</a>]
+            </div>
 
-            <div class="row" style="padding-bottom: 2em"></div>
+            <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Learnable Uncertainty under Laplace Approximations</h4>
             <div>
                 <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig.
             </div>
-            <div>UAI 2021</div>
+            <div>
+                UAI 2021
                 [<a href="https://arxiv.org/abs/2010.02720">arxiv</a>]
                 [<a href="https://github.com/wiseodd/lula">code</a>]
+            </div>
 
-            <div class="row" style="padding-bottom: 2em"></div>
+            <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Being Bayesian, Even Just a Bit, Fixes Overconfidence in ReLU Networks</h4>
             <div>
                 <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig.
             </div>
-            <div>ICML 2020</div>
+            <div>
+                ICML 2020
                 [<a href="http://proceedings.mlr.press/v119/kristiadi20a.html">abs</a>]
                 [<a href="https://github.com/wiseodd/last_layer_laplace">code</a>]
+            </div>
 
-            <div class="row" style="padding-bottom: 2em"></div>
+            <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Predictive Uncertainty Quantification with Compound Density Networks</h4>
             <div>
                 <i>Kristiadi, Agustinus</i>, Sina Däubener, and Asja Fischer.
             </div>
-            <div>Bayesian Deep Learning Workshop, NeurIPS 2019</div>
+            <div>
+                Bayesian Deep Learning Workshop, NeurIPS 2019
                 [<a href="https://arxiv.org/abs/1902.01080">arxiv</a>]
                 [<a href="https://github.com/wiseodd/compound-density-networks">code</a>]
+            </div>
 
-            <div class="row" style="padding-bottom: 2em"></div>
+            <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Incorporating Literals into Knowledge Graph Embeddings</h4>
             <div>
               <i>Kristiadi, Agustinus</i>*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer.
             </div>
-            <div>ISWC 2019</div>
+            <div>
+                ISWC 2019
                 [<a href="https://arxiv.org/abs/1802.00934">arxiv</a>]
                 [<a href="https://github.com/SmartDataAnalytics/LiteralE">code</a>]
+            </div>
 
-            <div class="row" style="padding-bottom: 2em"></div>
+            <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Improving Response Selection in Multi-turn Dialogue Systems by Incorporating Domain Knowledge</h4>
             <div>
               Chauduri, Debanjan, <i>Agustinus Kristiadi</i>, Jens Lehmann, Asja Fischer.
             </div>
-            <div>CoNLL 2018</div>
+            <div>
+                CoNLL 2018
                 [<a href="https://arxiv.org/abs/1809.03194">arxiv</a>]
                 [<a href="https://github.com/SmartDataAnalytics/AK-DE-biGRU">code</a>]
+            </div>
 
-            <div class="row" style="padding-bottom: 2em"></div>
+            <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Deep Convolutional Level Set Method for Image Segmentation</h4>
             <div>
-              <i>Kristiadi, Agustinus</i>, and Pranowo Pranowo. Journal of ICT Research and Applications 11.3 (2017): 284-298.
+              <i>Kristiadi, Agustinus</i>, and Pranowo Pranowo.
             </div>
-            [<a href="http://journals.itb.ac.id/index.php/jictra/article/download/3887/3046">pdf</a>]
-            [<a href="https://github.com/wiseodd/cnn-levelset">code</a>]
+            <div>
+                Journal of ICT Research and Applications 11.3 (2017)
+                [<a href="http://journals.itb.ac.id/index.php/jictra/article/download/3887/3046">pdf</a>]
+                [<a href="https://github.com/wiseodd/cnn-levelset">code</a>]
+            </div>
 
-            <div class="row" style="padding-bottom: 2em"></div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Parallel Particle Swarm Optimization for Image Segmentation</h4>
             <div>
               <i>Kristiadi, Agustinus</i>, Pranowo Pranowo, and Paulus Mudjihartono.
             </div>
-            <div>DEIS 2013</div>
-            [<a href="http://sdiwc.net/digital-library/web-admin/upload-pdf/00000491.pdf">pdf</a>]
-            [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
+            <div>
+                DEIS 2013
+                [<a href="http://sdiwc.net/digital-library/web-admin/upload-pdf/00000491.pdf">pdf</a>]
+                [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
+            </div>
         </div>
     </div>
 
@@ -226,7 +246,7 @@ header-img: "img/about-bg.jpg"
             </div>
                 [<a href="https://arxiv.org/abs/2106.10065">arxiv</a>]
 
-            <div class="row" style="padding-bottom: 2em"></div>
+            <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Fast Predictive Uncertainty for Classification with Bayesian Deep Networks</h4>
             <div>
