Add profile picture

--- a/about.html
+++ b/about.html
@@ -7,9 +7,17 @@ header-img: "img/about-bg.jpg"
 
 <div id="aboutme" class="row">
 <div class="col-md-12">
-    <h1 class="section-header" style="padding-bottom: 0.8em;">Agustinus Kristiadi</h1>
-
     <div class="row">
+        <div class="col-md-2">
+            <img class="float-left" alt="Agustinus's Portrait" src="/img/portrait_20211121_square.jpeg"
+              data-holder-rendered="true" style="width: 150px; border-radius: 50% !important;">
+        </div>
+        <div class="col-md-10" style="padding-top: 1em">
+            <h1 class="section-header" style="padding: 0;">Agustinus Kristiadi</h1>
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 2em">
         <div class="col-md-3"><b>Email</b></div>
         <div class="col-md-8">agustinus[at]kristia.de</div>
     </div>
